--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "### О проекте",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack-dev-server",
+    "build": "rm -rf build && webpack --mode production",
+    "dev": "webpack serve",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
@@ -20,7 +20,8 @@
   },
   "homepage": "https://github.com/nlog675/mesto#readme",
   "devDependencies": {
-    "@babel/preset-env": "^7.18.9",
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "clean-webpack-plugin": "^4.0.0",
@@ -36,6 +37,6 @@
     "webpack-dev-server": "^4.9.3"
   },
   "dependencies": {
-    "core-js": "^3.23.5"
+    "core-js": "^3.24.1"
   }
 }
